recursion.lessons.recursion.koch.Koch.scala.error
Koch:23: error: not found: value levels
  snowFlake(levels, length)
            ^